--- a/animation.html
+++ b/animation.html
@@ -110,6 +110,7 @@
         <button>
           <a
             href="http://www.ceciliejasmin.dk/kea/04_animation/mus_i_elefanthus/index.html"
+            target="_blank"
             >SPIL SPILLET</a
           >
         </button>
@@ -168,8 +169,17 @@
           </p>
         </div>
         <button>
-          <a href="http://ceciliejasmin.dk/kea/04_animation/website/"
+          <a
+            href="http://ceciliejasmin.dk/kea/04_animation/website/"
+            target="_blank"
             >SPIL WEBSITE</a
+          >
+        </button>
+        <button>
+          <a
+            href="http://ceciliejasmin.dk/kea/04_animation/website/doku.html"
+            target="_blank"
+            >DOKUMENTATION</a
           >
         </button>
       </section>
@@ -178,8 +188,6 @@
         <div class="doku">
           <div class="doku_indhold">
             <h2>DOKUMENTATION</h2>
-            <button>DOKUMENTATION</button>
-            <button>IDE</button>
           </div>
         </div>
       </section>
