--- a/content.html
+++ b/content.html
@@ -109,6 +109,7 @@
         <button>
           <a
             href="http://ceciliejasmin.dk/kea/05_content/01_pilot/julianes_passion_interview.mp4"
+            target="_blank"
             >SE VIDEO</a
           >
         </button>
@@ -192,7 +193,11 @@
           >
         </button>
         <button>
-          <a href="0" target="_blank">DOKUMENTATION</a>
+          <a
+            href="https://ceciliejasmin.dk/kea/05_content/02_redesign/redesign.pdf"
+            target="_blank"
+            >DOKUMENTATION</a
+          >
         </button>
       </section>
 
