p tag added to text

--- a/animation.html
+++ b/animation.html
@@ -37,13 +37,18 @@
           <hr />
           <p>
             Dette tema var delt op i forskellige faser, hvor vi gradvist
-            opbyggede vores eget interaktive animerede spil. Derudover var der
-            mange små opgaver der skulle introducere os til - og træne os i -
-            JavaScript, CSS-animationer, Git, Adobe illustrator til rentegning
-            af spildesign samt Adobe Audition til spil lyd. Sidst skulle vi lave
-            et dokumentationssite der indeholdt en assetliste, beskrivelse af
-            ideen samt selve spillet. Temaet lærte os at fremstille interaktive
-            brugergrænseflader der engagerer og motiverer brugeren.
+            opbyggede vores eget interaktive animerede spil.
+          </p>
+          <p>
+            Derudover var der mange små opgaver der skulle introducere os til -
+            og træne os i - JavaScript, CSS-animationer, Git, Adobe illustrator
+            til rentegning af spildesign samt Adobe Audition til spil lyd.
+          </p>
+          <p>
+            Sidst skulle vi lave et dokumentationssite der indeholdt en
+            assetliste, beskrivelse af ideen samt selve spillet. Temaet lærte os
+            at fremstille interaktive brugergrænseflader der engagerer og
+            motiverer brugeren.
           </p>
         </div>
       </section>
@@ -117,7 +122,7 @@
       </section>
 
       <section>
-        <div class="section_wrapper">
+        <div class="section_wrapper_2">
           <div class="temabillede right">
             <img src="billeder/spil_web_portfolio.png" />
           </div>
