p tag added to text

--- a/content.html
+++ b/content.html
@@ -37,12 +37,18 @@
           <hr />
           <p>
             Dette tema består af et individuelt pilotprojekt samt en
-            gruppeopgave i redesign. Her lærte vi om grundlæggende indførsel og
-            faglige begreber i videoproduktion, herunder forarbejdet inden man
-            skal optage såsom udarbejdelsen af synopsis, om selve optagelsen med
-            smartphone, DSLR-kamera og supplerende udstyr som mikrofoner m.m.
-            samt postproduktion. Gennem opgaverne fik lært færdigheder indenfor
-            Adobe Audition, Adobe Premiere Pro, HTML, CSS samt lidt JavaScript.
+            gruppeopgave i redesign.
+          </p>
+          <p>
+            Her lærte vi om grundlæggende indførsel og faglige begreber i
+            videoproduktion, herunder forarbejdet inden man skal optage såsom
+            udarbejdelsen af synopsis, om selve optagelsen med smartphone,
+            DSLR-kamera og supplerende udstyr som mikrofoner m.m. samt
+            postproduktion.
+          </p>
+          <p>
+            Gennem opgaverne fik lært færdigheder indenfor Adobe Audition, Adobe
+            Premiere Pro, HTML, CSS samt lidt JavaScript.
           </p>
         </div>
       </section>
