--- a/index.html
+++ b/index.html
@@ -38,43 +38,36 @@
         <p>MMD 1. SEMESTER F2021</p>
       </section>
 
-      <section class="wide">
-        <div class="text_indhold">
-          <h2>VELKOMMEN</h2>
-          <hr />
-          <p>
-            Dette er min portfolio opgave som også var tema 6 i første semester.
-          </p>
-        </div>
+      <section>
+        <h2>VELKOMMEN</h2>
+        <hr />
+        <p>
+          Dette er min portfolio opgave som også var tema 6 i første semester.
+        </p>
       </section>
 
-      <section>
-        <div class="section_wrapper">
-          <div>
-            <img src="billeder/portfolio‑billede.webp" alt="test" />
-          </div>
-          <div class="text">
-            <p>
-              Hvad har jeg lært på dette hæsblæsende semester? Hvis du er
-              interesseret i hvad man som multimediedesigner lærer helt fra
-              starten af, så er du kommet til det rette sted. Se de forskellige
-              temaer og udforsk de færdige produkter her.
-            </p>
+      <section class="wide">
+        <div class="tema_6">
+          <div class="section_wrapper">
+            <div>
+              <img src="billeder/portfolio‑billede.webp" alt="test" />
+            </div>
+            <div class="text">
+              <h3>06 - PORTFOLIO</h3>
+              <p>
+                Hvad har jeg lært på dette hæsblæsende semester? Hvis du er
+                interesseret i hvad man som multimediedesigner lærer helt fra
+                starten af, så er du kommet til det rette sted. Se de
+                forskellige temaer og udforsk de færdige produkter her.
+              </p>
 
-            <div class="knap">
-              <button>
-                <a href="portfolio.html">SE PORTFOLIO</a>
-              </button>
+              <div class="knap">
+                <button>
+                  <a href="portfolio.html">SE PORTFOLIO</a>
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="wide">
-        <div class="round">
-          <p>lavet af</p>
-          <p>Cecilie Jørgensen</p>
-          <img src="billeder/profilbillede.webp" alt="test" />
         </div>
       </section>
     </main>
