--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,9 @@
           <hr />
           <p>
             Velkommen til min portfolio for 1. semester på
-            multimedieuddannelsen. Klik på et tema for at se hvad jeg har lært.
+            multimedieuddannelsen.
           </p>
+          <p>Klik på et tema for at se hvad jeg har lært.</p>
         </div>
       </section>
 
@@ -56,9 +57,11 @@
                 designprocesser, hvilket gjorde det muligt for mig at lave et
                 responsivt site. Se hvordan det blev her.
               </p>
-              <button>
-                <a href="web.html">SE TEMA</a>
-              </button>
+              <div class="knap_2">
+                <button>
+                  <a href="web.html">SE TEMA</a>
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -79,9 +82,11 @@
                 hvordan min prototype blev efter flere tests og undersøgelser
                 her.
               </p>
-              <button>
-                <a href="ux.html">SE TEMA</a>
-              </button>
+              <div class="knap_2">
+                <button>
+                  <a href="ux.html">SE TEMA</a>
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -101,9 +106,11 @@
                 til javacript gennem udviklingen af et simpelt spil_test. Se
                 hvordan jeg fik det til at blive til et spil her.
               </p>
-              <button>
-                <a href="animation.html">SE TEMA</a>
-              </button>
+              <div class="knap_2">
+                <button>
+                  <a href="animation.html">SE TEMA</a>
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -123,9 +130,11 @@
                 af DSLR kamera, implementere video til hjemmeside og meget mere.
                 Se de færdige resultater her.
               </p>
-              <button>
-                <a href="content.html">SE TEMA</a>
-              </button>
+              <div class="knap_2">
+                <button>
+                  <a href="content.html">SE TEMA</a>
+                </button>
+              </div>
             </div>
           </div>
         </div>
