p tag added to text

--- a/ux.html
+++ b/ux.html
@@ -39,11 +39,17 @@
             Dette tema lærte om os forskellige research metoder, hvor vi
             indsamlede data og behandlede dem for at opnå en større
             brugerforståelse. Det var bl.a. gennem desk research, surveys og
-            interviews. Under temaet udarbejdede vi en klikbar, hi-fi-prototype
-            der løbende kunne testes og forbedres. Her skulle vi også skrive
-            copy og microcopy tekster for at motivere brugeren. Sidst skulle vi
-            lave et pitch hvor vi ud fra præsentationen skulle bevise hvordan vi
-            havde behandlet de data vi havde indsamlet til reelle løsninger.
+            interviews.
+          </p>
+          <p>
+            Under temaet udarbejdede vi en klikbar, hi-fi-prototype der løbende
+            kunne testes og forbedres. Her skulle vi også skrive copy og
+            microcopy tekster for at motivere brugeren.
+          </p>
+          <p>
+            Sidst skulle vi lave et pitch hvor vi ud fra præsentationen skulle
+            bevise hvordan vi havde behandlet de data vi havde indsamlet til
+            reelle løsninger.
           </p>
         </div>
       </section>
