p tag added to text

--- a/web.html
+++ b/web.html
@@ -39,14 +39,18 @@
             Dette tema bestod af delopgaver der sammen udgjorde det færdige
             site, der var et onepage responsivt site. Det blev lavet ud fra
             grundlæggende kode og designprocesser, som vi trinvist blev
-            introduceret til, og fik erfaring med, gennem delopgaverne. Her blev
-            vi introduceret til - og fik større forståelse for - HTML og CSS,
-            der er blev grundlæggende værktøjer gennem resten af semestret.
-            Derudover lærte vi grundlæggende designprincipper for komposition,
-            layout, praksisnære designprocesser og dokumentationsformer, såsom
-            mod board og styletile. Sidst fik vi også erfaring med Adobe
-            Photoshop gennem udarbejdelsen af vores splashbillede, der blev
-            lavet ud fra en bestemt stilart.
+            introduceret til, og fik erfaring med, gennem delopgaverne.
+          </p>
+          <p>
+            Her blev vi introduceret til - og fik større forståelse for - HTML
+            og CSS, der er blev grundlæggende værktøjer gennem resten af
+            semestret. Derudover lærte vi grundlæggende designprincipper for
+            komposition, layout, praksisnære designprocesser og
+            dokumentationsformer, såsom mod board og styletile.
+          </p>
+          <p>
+            Sidst fik vi også erfaring med Adobe Photoshop gennem udarbejdelsen
+            af vores splashbillede, der blev lavet ud fra en bestemt stilart.
           </p>
         </div>
       </section>
