--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>MMD 1. SEMESTER F2021</p>
       </section>
 
-      <section>
+      <section class="forord_center">
         <h2>VELKOMMEN</h2>
         <hr />
         <p>
@@ -46,27 +46,48 @@
         </p>
       </section>
 
-      <section class="wide">
+      <section class="wide_2">
         <div class="tema_6">
-          <div class="section_wrapper">
-            <div>
-              <img src="billeder/portfolio‑billede.webp" alt="test" />
-            </div>
-            <div class="text">
-              <h3>06 - PORTFOLIO</h3>
-              <p>
-                Hvad har jeg lært på dette hæsblæsende semester? Hvis du er
-                interesseret i hvad man som multimediedesigner lærer helt fra
-                starten af, så er du kommet til det rette sted. Se de
-                forskellige temaer og udforsk de færdige produkter her.
-              </p>
+          <div class="tema_6_indhold">
+            <div class="section_wrapper">
+              <div class="tema_6_billede">
+                <img src="billeder/portfolio_website.png" alt="test" />
+              </div>
+              <div class="text">
+                <h3>06 - PORTFOLIO</h3>
+                <p>
+                  Denne opgave gik ud på at lave en portfolio over hele
+                  semestret. Det færdige produkt er dette website som du besøger
+                  lige nu. Vi skulle benytte os af de grundlæggende færdigheder
+                  vi har lært i HTML, CSS, JavaScript samt produktion af indhold
+                  og designteori.
+                </p>
 
-              <div class="knap">
-                <button>
-                  <a href="portfolio.html">SE PORTFOLIO</a>
-                </button>
+                <div class="knap">
+                  <button>
+                    <a href="portfolio.html">PORTFOLIO</a>
+                  </button>
+
+                  <button>
+                    <a href="0">DOKUMENTATION</a>
+                  </button>
+                </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="tema_billeder">
+          <div class="billede_1">
+            <img src="billeder/animation_billede_2.webp" />
+          </div>
+          <div class="billede_2">
+            <img src="billeder/ux_billede.webp" />
+          </div>
+          <div class="billede_3">
+            <img src="billeder/content_billede2.webp" />
           </div>
         </div>
       </section>
