--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 
     <main id="portfolio">
       <section class="wide">
-        <div class="text_indhold">
+        <div class="forord_center">
           <h1>PORTFOLIO</h1>
           <hr />
           <p>
