--- a/content.html
+++ b/content.html
@@ -58,7 +58,8 @@
         <div class="temabillede">
           <img src="billeder/pilot_portfolio.png" />
         </div>
-        <h2>PILOT PROJEKT</h2>
+        <h2>05.01.02</h2>
+        <h3>PILOT PROJEKT</h3>
         <div class="paragraph">
           <p>
             I denne opgave skulle vi i grupper af 2 lave et interview vi
@@ -122,7 +123,7 @@
       </section>
 
       <section>
-        <div class="section_wrapper">
+        <div class="section_wrapper_2">
           <div class="temabillede right">
             <img src="billeder/redesign_portfolio.png" />
           </div>
@@ -130,6 +131,7 @@
       </section>
 
       <section>
+        <h2>05.02.00</h2>
         <h2>REDESIGN</h2>
         <div class="paragraph">
           <p>
