--- a/om_mig.html
+++ b/om_mig.html
@@ -29,32 +29,35 @@
         </ul>
       </nav>
     </header>
-
     <main>
-      <section class="wide_3">
-        <div class="overskrift">
+      <section class="wide_2">
+        <div class="text_indhold">
           <h1>OM MIG</h1>
         </div>
       </section>
 
       <section>
         <div class="section_wrapper">
-          <div class="round right">
-            <img src="billeder/profilbillede.webp" />
+          <div class="profilbillede1">
+            <img src="billeder/profilbillede2.webp" />
           </div>
           <div class="text_left">
             <h2>HVORFOR MMD?</h2>
             <p>
               Før denne uddannelse studerede jeg til bygningskonstruktør på KEA,
               men jeg lærte dog hurtigt at jeg skulle lave noget mere kreativt.
+            </p>
+            <p>
               Valget faldt hurtigt på MMD da jeg tidligere har arbejdet som
               tekstbeskrivelsesforfatter for et firma der lavede websites, hvor
-              jeg også fik lov til at hjælpe til på designet af dem. Jeg
-              begyndte på multimediedesigner uddannelsen i februar 2021. Igennem
-              semestret har jeg også fået bekræftet at det var det rigtige valg
-              at skifte studie. Jeg har forelsket mig i processen, både når det
-              gælder design og kode; jeg føler jeg har fundet min hylde hvor
-              hverdagen går hurtigt og hvor jeg føler mig udfodret og
+              jeg også fik lov til at hjælpe til på designet af dem.
+            </p>
+            <p>
+              Jeg begyndte på multimediedesigner uddannelsen i februar 2021.
+              Igennem semestret har jeg også fået bekræftet at det var det
+              rigtige valg at skifte studie. Jeg har forelsket mig i processen,
+              både når det gælder design og kode; jeg føler jeg har fundet min
+              hylde hvor hverdagen går hurtigt og hvor jeg føler mig udfodret og
               underholdet hele vejen igennem.
             </p>
           </div>
@@ -63,25 +66,53 @@
 
       <section>
         <div class="section_wrapper">
-          <div class="round">
-            <img src="billeder/profilbillede.webp" />
+          <div class="profilbillede2">
+            <img src="billeder/profilbillede5.webp" />
           </div>
-          <div class="tekst">
-            <h2>OM MIG</h2>
+
+          <div class="text_right">
+            <h2>HVEM ER JEG?</h2>
             <p>
               Jeg hedder Cecilie Jasmin Jørgensen, er 24 år gammel og bosat på
-              Nørrebro. Jeg begyndte på multimediedesigner uddannelsen i februar
-              2021. Før denne uddannelse studerede jeg til bygningskonstruktør
-              på KEA, men jeg lærte dog hurtigt at jeg skulle lave noget mere
-              kreativt. Valget faldt hurtigt på MMD da jeg tidligere har
-              arbejdet som tekstbeskrivelsesforfatter for et firma der lavede
-              websites, hvor jeg også fik lov til at hjælpe til på designet af
-              dem. Igennem semestret har jeg også fået bekræftet at det var det
-              rigtige valg at skifte studie. Jeg har forelsket mig i processen,
-              både når det gælder design og kode; jeg føler jeg har fundet min
-              hylde hvor hverdagen går hurtigt og hvor jeg føler mig udfodret og
-              underholdet hele vejen igennem.
+              Nørrebro sammen med min kæreste.
             </p>
+            <p>
+              Når jeg ikke sidder foran skærmen og koder, elsker jeg at komme
+              lidt væk ved at gå en tur eller cykle rundt i byen eller ved noget
+              smuk natur. Et par gange om året er jeg "plejemor" til den sødeste
+              hund, hvor jeg kan kombinere min kærlighed for dyr og naturen.
+            </p>
+            <p>
+              Udover lange gåture og frisk luft, nyder jeg også at udfolde mig
+              kreativt enten gennem sang, tegninger og dans samt fotografi men
+              også gennem en masse små indretningsprojekter i lejligheden.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="section_wrapper">
+          <div class="tegning">
+            <img src="billeder/tegninger2.webp" />
+          </div>
+        </div>
+      </section>
+
+      <section class="wide">
+        <h3>MIT LIV I BILLEDER</h3>
+        <div class="billede_wrapper">
+          <div class="om_mig_billeder">
+            <div class="tema_billeder">
+              <div class="billede_1">
+                <img src="billeder/om_mig_billede.webp" />
+              </div>
+              <div class="billede_2">
+                <img src="billeder/indy.webp" />
+              </div>
+              <div class="billede_3">
+                <img src="billeder/kbh2.webp" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
