--- a/ux.html
+++ b/ux.html
@@ -59,7 +59,9 @@
         <div class="temabillede">
           <img src="billeder/ux_portfolio.png" />
         </div>
-        <h2>GRUNDLÆGGENDE UX</h2>
+        <h2>03.02.02</h2>
+        <h3>XD PROTOTYPE</h3>
+
         <p>
           I opgaven skulle vi udarbejde en klikbar, HI-FI-prototype til en
           t-shirt webshop. Vi skulle selv finde på en USP der kunne løse en
