--- a/web.html
+++ b/web.html
@@ -92,8 +92,6 @@
                 classes. Både wireframes og layoutdiagrammer var i en fast form,
                 der gjorde det nemt at gennemskue om man havde forstået det
                 eller ej. Det lærte mig at kodning er nemmere med planlægning.
-              </p>
-              <p>
                 Da sitet skulle blive responsivt blev vi introduceret til
                 flexbox, og grids. Det var gennem disse værktøjer at vi kunne
                 følge kompositionen af elementerne fra wireframen.
@@ -103,13 +101,10 @@
                 skulle tage designmæssige beslutninger såsom fonts og farver på
                 sitet. Her lærte jeg især meget om tilgængelighed i fonts og
                 farver, fx hvad der er mere læsbart hvis man har et synshandicap
-                eller er farveblind.
-              </p>
-              <p>
-                Styletile blev lavet ved brug af grundlæggende CSS såsom
-                padding, margin, background-color m.m. som vi lærte i løbet af
-                temaet. Da det var blevet lavet, var det nemt at implementere
-                det til resten af sitet.
+                eller er farveblind. Styletile blev lavet ved brug af
+                grundlæggende CSS såsom padding, margin, background-color m.m.
+                som vi lærte i løbet af temaet. Da det var blevet lavet, var det
+                nemt at implementere det til resten af sitet.
               </p>
             </div>
           </div>
