changes to menu

--- a/animation.html
+++ b/animation.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
-      <nav>
+      <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
           <li><a href="index.html">FORSIDE</a></li>
@@ -32,7 +32,7 @@
 
     <main>
       <section class="wide">
-        <div class="text_indhold">
+        <div class="forord">
           <h1>04 ANIMATION</h1>
           <hr />
           <p>
@@ -58,7 +58,7 @@
         <div class="temabillede">
           <img src="billeder/spil_portfolio.png" />
         </div>
-        <h2>04.08.</h2>
+        <h2>04.08.00</h2>
         <h3>SPILLET</h3>
         <div class="paragraph">
           <p>
@@ -123,7 +123,7 @@
       </section>
 
       <section>
-        <div class="section_wrapper_2">
+        <div class="section_wrapper2">
           <div class="temabillede right">
             <img src="billeder/spil_web_portfolio.png" />
           </div>
@@ -131,7 +131,7 @@
       </section>
 
       <section>
-        <h2>04.09</h2>
+        <h2>04.09.00</h2>
         <h3>SPIL WEBSITE</h3>
         <div class="paragraph">
           <p>
