--- a/content.html
+++ b/content.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
-      <nav>
+      <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
           <li><a href="index.html">FORSIDE</a></li>
@@ -32,7 +32,7 @@
 
     <main>
       <section class="wide">
-        <div class="text_indhold">
+        <div class="forord">
           <h1>05 CONTENT</h1>
           <hr />
           <p>
@@ -123,7 +123,7 @@
       </section>
 
       <section>
-        <div class="section_wrapper_2">
+        <div class="section_wrapper2">
           <div class="temabillede right">
             <img src="billeder/redesign_portfolio.png" />
           </div>
