--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="tema_6_billede">
                 <img src="billeder/portfolio_website.png" alt="test" />
               </div>
-              <div class="text">
+              <div class="tema_6_text">
                 <h3>06 - PORTFOLIO</h3>
                 <p>
                   Denne opgave gik ud på at lave en portfolio over hele
@@ -66,10 +66,6 @@
                 <div class="knap">
                   <button>
                     <a href="portfolio.html">PORTFOLIO</a>
-                  </button>
-
-                  <button>
-                    <a href="0">DOKUMENTATION</a>
                   </button>
                 </div>
               </div>
