burgermenu style added

--- a/om_mig.html
+++ b/om_mig.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
-      <nav>
+      <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
           <li><a href="index.html">FORSIDE</a></li>
@@ -29,15 +29,16 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section class="wide_2">
-        <div class="text_indhold">
+        <div class="forord">
           <h1>OM MIG</h1>
         </div>
       </section>
 
       <section>
-        <div class="section_wrapper">
+        <div class="section_wrapper2">
           <div class="profilbillede1">
             <img src="billeder/profilbillede2.webp" />
           </div>
@@ -65,7 +66,7 @@
       </section>
 
       <section>
-        <div class="section_wrapper">
+        <div class="section_wrapper2">
           <div class="profilbillede2">
             <img src="billeder/profilbillede5.webp" />
           </div>
@@ -91,7 +92,7 @@
         </div>
       </section>
       <section>
-        <div class="section_wrapper">
+        <div class="section_wrapper2">
           <div class="tegning">
             <img src="billeder/tegninger2.webp" />
           </div>
