burger menu style

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
-      <nav>
+      <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
           <li><a href="index.html">FORSIDE</a></li>
@@ -39,7 +39,6 @@
             Velkommen til min portfolio for 1. semester på
             multimedieuddannelsen.
           </p>
-          <p>Klik på et tema for at se hvad jeg har lært.</p>
         </div>
       </section>
 
@@ -57,7 +56,7 @@
                 designprocesser, hvilket gjorde det muligt for mig at lave et
                 responsivt site. Se hvordan det blev her.
               </p>
-              <div class="knap_2">
+              <div class="knap">
                 <button>
                   <a href="web.html">SE TEMA</a>
                 </button>
@@ -82,7 +81,7 @@
                 hvordan min prototype blev efter flere tests og undersøgelser
                 her.
               </p>
-              <div class="knap_2">
+              <div class="knap">
                 <button>
                   <a href="ux.html">SE TEMA</a>
                 </button>
@@ -106,7 +105,7 @@
                 til javacript gennem udviklingen af et simpelt spil_test. Se
                 hvordan jeg fik det til at blive til et spil her.
               </p>
-              <div class="knap_2">
+              <div class="knap">
                 <button>
                   <a href="animation.html">SE TEMA</a>
                 </button>
@@ -130,7 +129,7 @@
                 af DSLR kamera, implementere video til hjemmeside og meget mere.
                 Se de færdige resultater her.
               </p>
-              <div class="knap_2">
+              <div class="knap">
                 <button>
                   <a href="content.html">SE TEMA</a>
                 </button>
