--- a/web.html
+++ b/web.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
-      <nav>
+      <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
           <li><a href="index.html">FORSIDE</a></li>
@@ -32,7 +32,7 @@
 
     <main>
       <section class="wide">
-        <div class="text_indhold">
+        <div class="forord">
           <h1>02 WEB</h1>
           <hr />
           <p>
@@ -57,13 +57,32 @@
 
       <section>
         <h2>OPGAVER I TEMAET</h2>
-        <div>
-          <div class="temabillede">
-            <img src="billeder/responsive_portfolio.png" />
-          </div>
-          <div>
-            <h2>02.02.04</h2>
-            <h3>RESPONSIVE SITE</h3>
+       
+          <div class="tema_grid">
+            <div class="temabillede">
+              <img src="billeder/responsive_portfolio.png" />
+            </div>
+            <div class="opgave_info">
+              <h2>02.02.04</h2>
+              <h3>RESPONSIVE SITE</h3>
+              <button>
+                <a
+                  href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
+                  target="_blank"
+                  >BESØG SITE</a >
+              </button>
+              <button>
+                <a
+                  href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
+                  target="_blank"
+                  >SE STYLETILE</a>
+              </button>
+              </div>
+            </div>
+          
+
+          <details>
+            <summary>LÆS OM MIT FORLØB HER</summary>
             <div class="paragraph">
               <p>Denne opgave er den færdige version af det responsive site.</p>
               <p>
@@ -107,22 +126,7 @@
                 nemt at implementere det til resten af sitet.
               </p>
             </div>
-          </div>
-
-          <button>
-            <a
-              href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
-              target="_blank"
-              >BESØG SITE</a
-            >
-          </button>
-          <button>
-            <a
-              href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
-              target="_blank"
-              >SE STYLETILE</a
-            >
-          </button>
+          </details>
         </div>
       </section>
 
